# django-blocklist

./: .gitignore  CHANGELOG.md  README.md  apps.py  blocklist-report-sample-obfuscated.txt  manage.py  middleware.py  models.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.cfg  urls.py  utils.py
django_blocklist/: admin.py  apps.py  middleware.py  models.py  utils.py
django_blocklist/management/commands/: add_to_blocklist.py  clean_blocklist.py  fake_blocklist.py  import_blocklist.py  remove_from_blocklist.py  report_blocklist.py  search_blocklist.py  update_blocklist.py
django_blocklist/migrations/: 0001_initial.py
django_blocklist/tests/: test_admin.py  test_management.py  test_middleware.py  test_models.py  test_utils.py
management/commands/: clean_blocklist.py  fake_blocklist.py
tests/: test_settings.py
